--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>test2</h1>
+    <h1>test</h1>
+    <p>test</p>
 </body>
 </html>
