--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <h1>test</h1>
-    <p>test</p>
+        <div class="navbar">
+            <div class="start">
+                <img src="LogoOnepunchmen.png">
+            </div>
+            <div class="midden">
+        
+            </div>
+            <div class="einde">
+                <h2>afdf</h2>
+            </div>
+        </div>
 </body>
+
 </html>
