eerste dingen en een leaderboard html gemaakt

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <div class="navbar">
             <div class="start">
                 <img src="LogoOnepunchmen.png">
+                <h2>Hero Association</h2>
             </div>
             <div class="midden">
         
             </div>
             <div class="einde">
-                <h2>afdf</h2>
+                <a href="index.html">Home</a>
+
+                <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
             </div>
         </div>
 </body>
