--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -21,8 +21,8 @@
             <h2>afdf</h2>
         </div>
     </div>
-    <div id="leaderboard">
+    <table id="leaderboard">
 
-    </div>
+    </table>
 </body>
 </html>
