begin homepage toevoegen

--- a/index.html
+++ b/index.html
@@ -9,20 +9,37 @@
 </head>
 
 <body>
-        <div class="navbar">
-            <div class="start">
-                <img src="LogoOnepunchmen.png">
-                <h2>Hero Association</h2>
-            </div>
-            <div class="midden">
-        
-            </div>
-            <div class="einde">
-                <a href="index.html">Home</a>
-
-                <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
-            </div>
+    <div class="navbar">
+        <div class="start">
+            <img src="LogoOnepunchmen.png">
+            <h2>Hero Association</h2>
         </div>
+        <div class="midden">
+
+        </div>
+        <div class="einde">
+            <a href="index.html">Home</a>
+
+            <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
+        </div>
+    </div>
+    <div  class="top">
+        <div class="card">
+            <div class="card-content">
+            <h2>What do we do</h2>
+            <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical class
+                system to
+                organize its heroes, with four classes and individually numbered ranks within respective classes
+                (classes C, B, A, and
+                S).</p>
+                </div>
+                <img src="Hero_Association_Headquarters.png" alt="">
+        </div>
+        <div class="card2">
+            <h2></h2>
+            <p></p>
+        </div>
+    </div>
 </body>
 
 </html>
