added elite leaderboard id

--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -24,6 +24,8 @@
             <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
+    <table class="herocard" id="eliteLeaderboard">
+    </table>
     <table class="herocard" id="leaderboard">
     </table>
 </body>
