--- a/index.html
+++ b/index.html
@@ -23,22 +23,38 @@
             <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
-    <div  class="top">
+    <div class="top">
         <div class="card">
             <div class="card-content">
-            <h2>What do we do</h2>
-            <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical class
-                system to
-                organize its heroes, with four classes and individually numbered ranks within respective classes
-                (classes C, B, A, and
-                S).</p>
-                </div>
-                <img src="Hero_Association_Headquarters.png" alt="">
+                <h2>What do we do</h2>
+                <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
+                    class
+                    system to
+                    organize its heroes, with four classes and individually numbered ranks within respective classes
+                    (classes C, B, A, and
+                    S).</p>
+            </div>
+            <img src="Hero_Association_Headquarters.png" alt="">
         </div>
         <div class="card2">
             <h2></h2>
             <p></p>
         </div>
+    </div>
+    <div class="secondpart">
+    <div class="Devider">
+        <h2></h2>
+        <img src="Hero-Association-white.png">
+    </div>
+    <Div>
+        <div class="card3">
+            <h2></h2>
+            <p></p>
+        </div>
+    </div>
+    <div class="footer">
+        <img src="LogoOnepunchmen.png">
+    <p>&copy; 2024 Hero Association.</p>
     </div>
 </body>
 
