--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="Leaderboard.css">
     <script src="../script.js" defer></script>
 </head>
 
@@ -13,16 +13,18 @@
     <div class="navbar">
         <div class="start">
             <img src="../LogoOnepunchmen.png">
+            <h2>Hero Association</h2>
         </div>
         <div class="midden">
-
+    
         </div>
         <div class="einde">
-            <h2>afdf</h2>
+            <a href="index.html">Home</a>
+    
+            <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
-    <table id="leaderboard">
-
+    <table class="herocard" id="leaderboard">
     </table>
 </body>
 </html>
