--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -30,7 +30,9 @@
         <button id="button2" onclick='button("2")'>2</button>
         <button id="button3" onclick='button("3")'>3</button>
         <div class="Leaderboard">
-            <table id="eliteLeaderboard">
+            <table class="top3herocard" id="top3Leaderboard">
+            </table>
+            <table class="eliteherocard" id="eliteLeaderboard">
             </table>
             <table class="herocard" id="leaderboard">
             </table>
