--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -26,9 +26,9 @@
     </div>
     <main>
         <img src="../Hero_Association_Headquarters.png" alt="" class="transparent-bg">
-        <button id="button1" onclick='button("1")'>1</button>
-        <button id="button2" onclick='button("2")'>2</button>
-        <button id="button3" onclick='button("3")'>3</button>
+        <button id="button1" onclick='button("clear")'>1</button>
+        <button id="button2" onclick='button("S")'>2</button>
+        <button id="button3" onclick='button("A")'>3</button>
         <div class="Leaderboard">
             <table class="top3herocard" id="top3Leaderboard">
             </table>
