--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -16,7 +16,13 @@
             <h2>Hero Association</h2>
         </div>
         <div class="midden">
-
+            <div class="buttons">
+            <button id="button1" onclick='button("1")'>clear</button>
+            <button id="button2" onclick='button("2")'>S</button>
+            <button id="button3" onclick='button("3")'>A</button>
+            <button id="button4" onclick='button("4")'>B</button>
+            <button id="button5" onclick='button("5")'>C</button>
+            </div>
         </div>
         <div class="einde">
             <a href="../index.html">Home</a>
@@ -26,9 +32,6 @@
     </div>
     <main>
         <img src="../Hero_Association_Headquarters.png" alt="" class="transparent-bg">
-        <button id="button1" onclick='button("1")'>clear</button>
-        <button id="button2" onclick='button("2")'>S</button>
-        <button id="button3" onclick='button("3")'>A</button>
         <div class="Leaderboard">
             <table class="top3herocard" id="top3Leaderboard">
             </table>
