--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -17,11 +17,11 @@
         </div>
         <div class="midden">
             <div class="buttons">
-            <button id="button1" onclick='button("1")'>clear</button>
-            <button id="button2" onclick='button("2")'>S</button>
-            <button id="button3" onclick='button("3")'>A</button>
-            <button id="button4" onclick='button("4")'>B</button>
-            <button id="button5" onclick='button("5")'>C</button>
+                <button id="button1" onclick='button("1")'>clear</button>
+                <button id="button2" onclick='button("2")'>S</button>
+                <button id="button3" onclick='button("3")'>A</button>
+                <button id="button4" onclick='button("4")'>B</button>
+                <button id="button5" onclick='button("5")'>C</button>
             </div>
         </div>
         <div class="einde">
@@ -30,7 +30,21 @@
             <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
+
     <main>
+        <div class="tooltip">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-info-circle larger-svg"
+                viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                <path
+                    d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+            </svg>
+            <div class="tooltiptext">Rating: <br>
+                0 - 899 = C <br>
+                900 - 2299 = B <br>
+                2300 - 4999 = A <br>
+                5000 > = S</div>
+        </div>
         <img src="../Hero_Association_Headquarters.png" alt="" class="transparent-bg">
         <div class="Leaderboard">
             <table class="top3herocard" id="top3Leaderboard">
