--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
+    <main>
+        <img src="Hero_Association_Headquarters.png" alt="" class="transparent-bg">
     <div class="top">
         <div class="card">
             <div class="card-content">
@@ -41,6 +43,7 @@
             <p></p>
         </div>
     </div>
+    </main>
     <div class="secondpart">
     <div class="Devider">
         <h2></h2>
