--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -55,6 +55,10 @@
             </table>
         </div>
     </main>
+    <div class="footer">
+        <img src="../LogoOnepunchmen.png">
+        <p>&copy; 2024 Hero Association.</p>
+    </div>
 </body>
 
 </html>
