--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -16,12 +16,26 @@
             <h2>Hero Association</h2>
         </div>
         <div class="midden">
-            <div class="buttons">
-                <button id="button1" onclick='button("1")'>clear</button>
-                <button id="button2" onclick='button("2")'>S</button>
-                <button id="button3" onclick='button("3")'>A</button>
-                <button id="button4" onclick='button("4")'>B</button>
-                <button id="button5" onclick='button("5")'>C</button>
+            <h2>Sort:</h2>
+            <div class="dropdown">
+                <button class="dropdown-btn">Ranks</button>
+                <div class="dropdown-content">
+                    <button id="button1" onclick='button("1")'>All</button>
+                    <button id="button2" onclick='button("2")'>S</button>
+                    <button id="button3" onclick='button("3")'>A</button>
+                    <button id="button4" onclick='button("4")'>B</button>
+                    <button id="button5" onclick='button("5")'>C</button>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropdown-btn">Type</button>
+                <div class="dropdown-content">
+                    <button id="type1" onclick='type("1")'>rating</button>
+                    <button id="type2" onclick='type("2")'>votes</button>
+                    <!-- <button id="button3" onclick='button("3")'>A</button>
+                    <button id="button4" onclick='button("4")'>B</button>
+                    <button id="button5" onclick='button("5")'>C</button> -->
+                </div>
             </div>
         </div>
         <div class="einde">
