--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -24,7 +24,20 @@
         </div>
     </div>
     <div class="transparent-bg">
+        <div class="card">
+        <div class="card-content">
+            <h2>What do we do</h2>
+            <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
+                class
+                system to
+                organize its heroes, with four classes and individually numbered ranks within respective classes
+                (classes C, B, A, and
+                S).</p>
+        </div>
+        <img src="Hero_Association_Headquarters.png" alt="">
+        </div>
     </div>
+    
 </body>
 
 </html>
