--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -30,8 +30,8 @@
             <div class="dropdown">
                 <button class="dropdown-btn">Type</button>
                 <div class="dropdown-content">
-                    <button id="type1" onclick='type("1")'>rating</button>
-                    <button id="type2" onclick='type("2")'>votes</button>
+                    <button id="type1" onclick='leaderboardType("1")'>rating</button>
+                    <button id="type2" onclick='leaderboardType("2")'>votes</button>
                 </div>
             </div>
         </div>
