--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -31,7 +31,7 @@
                 <button class="dropdown-btn">Type</button>
                 <div class="dropdown-content">
                     <button id="type1" onclick='leaderboardType("1")'>rating</button>
-                    <button id="type2" onclick='leaderboardType("2")'>votes</button>
+                    <button id="type2" onclick='leaderboardType("2")'>upvotes</button>
                 </div>
             </div>
         </div>
