--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -23,20 +23,34 @@
             <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
-    <div class="transparent-bg">
-        <div class="card">
-        <div class="card-content">
-            <h2>What do we do</h2>
-            <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
-                class
-                system to
-                organize its heroes, with four classes and individually numbered ranks within respective classes
-                (classes C, B, A, and
-                S).</p>
+<main>
+    <img src="../Hero_Association_Headquarters.png" alt="" class="transparent-bg">
+    <div class="profileimg">
+           <img id="profileimg"  src="https://cdn.discordapp.com/attachments/1181867865826144286/1206959752530362368/Horse-Bone_profile.webp?ex=65dde7dd&is=65cb72dd&hm=0abcf682cad6fd5faa0d7088689f6e4156dda9310cb3a1d58e056e9c0511e1a6&" alt="">
+           <div class="info">
+           <div class="card2">
+            <h2>naam</h2>
+            <p></p>
         </div>
-        <img src="Hero_Association_Headquarters.png" alt="">
+        <div class="card3">
+            <h2>Ab</h2>
+            <p></p>
         </div>
     </div>
+    </div>
+        <div class="card4hole">
+        <div class="card4">
+            <h2>shit</h2>
+            <p></p>
+        </div>
+        </div>
+        <button id="button1" onclick='button("1")'>Up vote</button>
+        <button id="button2" onclick='button("2")'>Down vote</button>
+</main>
+<div class="footer">
+    <img src="../LogoOnepunchmen.png">
+    <p>&copy; 2024 Hero Association.</p>
+</div>
     
 </body>
 
