--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -44,8 +44,8 @@
             <p></p>
         </div>
         </div>
-        <button id="button1" onclick='button("1")'>Up vote</button>
-        <button id="button2" onclick='button("2")'>Down vote</button>
+        <button id="upvote" onclick='button("upvote")'>Up vote</button>
+        <button id="downvote" onclick='button("downvote")'>Down vote</button>
 </main>
 <div class="footer">
     <img src="../LogoOnepunchmen.png">
