--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="profile.css">
+    <script src="profile.js" defer></script>
 </head>
 
 <body>
