--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -45,8 +45,10 @@
             <p></p>
         </div>
         </div>
+        <div class="vote">
         <button id="upvote" onclick='button("upvote")'>Up vote</button>
         <button id="downvote" onclick='button("downvote")'>Down vote</button>
+        </div>
 </main>
 <div class="footer">
     <img src="../LogoOnepunchmen.png">
