changed html for profile

--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -27,20 +27,20 @@
 <main>
     <img src="../Hero_Association_Headquarters.png" alt="" class="transparent-bg">
     <div class="profileimg">
-           <img id="profileimg"  src="https://cdn.discordapp.com/attachments/1181867865826144286/1206959752530362368/Horse-Bone_profile.webp?ex=65dde7dd&is=65cb72dd&hm=0abcf682cad6fd5faa0d7088689f6e4156dda9310cb3a1d58e056e9c0511e1a6&" alt="">
+           <img id="profileimg" src="https://cdn.discordapp.com/attachments/1181867865826144286/1206959752530362368/Horse-Bone_profile.webp?ex=65dde7dd&is=65cb72dd&hm=0abcf682cad6fd5faa0d7088689f6e4156dda9310cb3a1d58e056e9c0511e1a6&" alt="">
            <div class="info">
-           <div class="card2">
+           <div id="card2">
             <h2>naam</h2>
             <p></p>
         </div>
-        <div class="card3">
+        <div id="card3">
             <h2>Ab</h2>
             <p></p>
         </div>
     </div>
     </div>
         <div class="card4hole">
-        <div class="card4">
+        <div id="card4">
             <h2>shit</h2>
             <p></p>
         </div>
