--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -21,7 +21,7 @@
         <div class="einde">
             <a href="index.html">Home</a>
 
-            <a href="Leaderboard/Leaderboard.html">Leaderboard</a>
+            <a href="../Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
     </div>
 <main>
