--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -19,7 +19,7 @@
 
         </div>
         <div class="einde">
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
 
             <a href="../Leaderboard/Leaderboard.html">Leaderboard</a>
         </div>
@@ -40,7 +40,8 @@
     </div>
     </div>
         <div class="card4hole">
-        <div id="card4">
+            <img id="activityimg" src="" alt="">
+            <div id="card4">
             <h2>shit</h2>
             <p></p>
         </div>
@@ -65,4 +66,4 @@
     
 </body>
 
-</html> 
+</html>
