--- a/hero-profile/profile.html
+++ b/hero-profile/profile.html
@@ -42,7 +42,7 @@
         <div class="card4hole">
             <img id="activityimg" src="" alt="">
             <div id="card4">
-            <h2>shit</h2>
+            <h2>No actifity in the last 24 hours</h2>
             <p></p>
         </div>
         </div>
