buttons werken niet

--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -66,10 +66,10 @@
             </table>
         </div>
     </main>
-    <div class="footer">
+    <footer>
         <img src="../LogoOnepunchmen.png">
         <p>&copy; 2024 Hero Association.</p>
-    </div>
+    </footer>
 </body>
 
 </html>
