--- a/index.html
+++ b/index.html
@@ -25,40 +25,48 @@
     </div>
     <main>
         <img src="Hero_Association_Headquarters.png" alt="" class="transparent-bg">
-    <div class="top">
-        <div class="card">
-            <div class="card-content">
-                <h2>What do we do</h2>
-                <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
-                    class
-                    system to
-                    organize its heroes, with four classes and individually numbered ranks within respective classes
-                    (classes C, B, A, and
-                    S).</p>
+        <div class="top">
+            <div class="card">
+                <div class="card-content">
+                    <h2>What do we do</h2>
+                    <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
+                        class
+                        system to
+                        organize its heroes, with four classes and individually numbered ranks within respective classes
+                        (classes C, B, A, and
+                        S).</p>
+                </div>
+                <img src="Hero_Association_Headquarters.png" alt="">
             </div>
-            <img src="Hero_Association_Headquarters.png" alt="">
+            <div class="card2">
+                <h2></h2>
+                <p></p>
+            </div>
         </div>
-        <div class="card2">
-            <h2></h2>
-            <p></p>
-        </div>
-    </div>
     </main>
     <div class="secondpart">
-    <div class="Devider">
-        <h2></h2>
-        <img src="Hero-Association-white.png">
-    </div>
-    <Div>
-        <div class="card3">
+        <div class="Devider">
             <h2></h2>
-            <p></p>
+            <img src="Hero-Association-white.png">
+        </div>
+        <div>
+            <div class="card3">
+                <h2></h2>
+                <p></p>
+            </div>
         </div>
     </div>
-    <div class="footer">
-        <img src="LogoOnepunchmen.png">
-    <p>&copy; 2024 Hero Association.</p>
+    <div class="thirtpart">
+        <div class="Devider">
+            <h2></h2>
+            <img src="Hero-Association-white.png">
+        </div>
+
     </div>
+    <footer>
+        <img src="LogoOnepunchmen.png">
+        <p>&copy; 2024 Hero Association.</p>
+    </footer>
 </body>
 
 </html>
