--- a/index.html
+++ b/index.html
@@ -57,11 +57,31 @@
         </div>
     </div>
     <div class="thirtpart">
-        <div class="Devider">
+        <div class="Devider2">
             <h2></h2>
-            <img src="Hero-Association-white.png">
+
         </div>
 
+    </div>
+    <div class="Wanted">
+    <div class="card">
+        <div class="card-content">
+            <h1>Wanted</h1>
+            <h4>Last seen: Z-City</h4>
+            <h4>name: Garou</h4>
+            <h4>Power: <br>1:Immense Strength <br>
+                2:Immense Durability <br>
+                3:Immense Speed and Reflexes <br>
+                4:Immense Stamina and Endurance</h4>
+        </div>
+        <img src="https://cdn.discordapp.com/attachments/1181867865826144286/1207676267323981914/Garou_profile2.webp?ex=65e0832b&is=65ce0e2b&hm=08e3341be975e815f1d55ca0ab5ba6cc5fa2e3749e87d677c1b6f4e75b45b5fb&"
+            alt="">
+    </div>
+    <div class="card2">
+        <h2></h2>
+        <p></p>
+    </div>
+    </div>
     </div>
     <footer>
         <img src="LogoOnepunchmen.png">
