--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,13 +31,13 @@
         <div class="top">
             <div class="card">
                 <div class="card-content">
-                    <h2>What do we do</h2>
-                    <p>The Hero Association manages all of the cities' heroes. The Hero Association uses a hierarchical
+                    <h1>What do we do</h1>
+                    <h4>The Hero Association manages all of the cities heroes. The Hero Association uses a hierarchical
                         class
                         system to
                         organize its heroes, with four classes and individually numbered ranks within respective classes
                         (classes C, B, A, and
-                        S).</p>
+                        S).</h4>
                 </div>
                 <img src="Hero_Association_Headquarters.png" alt="">
             </div>
@@ -63,26 +66,36 @@
         </div>
 
     </div>
-    <div class="Wanted">
-    <div class="card">
-        <div class="card-content">
+<div class="wanted">
+    <div class="card4">
+        <div class="card2-content">
+    <h1>Wanted</h1>
+    <h3>Last seen: Z-City</h3>
+    <h4>name: Garou</h4>
+    <h4>Power: <br>1: Electricity Resistance <br>
+        2: Poison Resistance <br>
+        3: Enhanced Senses <br>
+        4: Keen Observation:</h4>
+        <h4>Fighting Style: Master Martial Artist</h4>
+    </div>
+    <img src="https://cdn.discordapp.com/attachments/1181867865826144286/1207682452395655228/Garou_profile3.png?ex=65e088ee&is=65ce13ee&hm=37fafb63e2b7719a5800e2d9c944951f9553d8d93d730e239f9c9c5a3cc20b34&"
+        alt="">
+    </div>
+    <div class="card5">
+        <div class="card2-content">
             <h1>Wanted</h1>
-            <h4>Last seen: Z-City</h4>
-            <h4>name: Garou</h4>
-            <h4>Power: <br>1:Immense Strength <br>
-                2:Immense Durability <br>
-                3:Immense Speed and Reflexes <br>
-                4:Immense Stamina and Endurance</h4>
+            <h3>Last seen: A-City</h3>
+            <h4>name: Boros</h4>
+            <h4>Power: <br>1: Energy Projection <br>
+                2: Flight <br>
+                3: Energy Bullets <br>
+                4: Power Release</h4>
+                <h4>Fighting Style: Experienced Combatant</h4>
         </div>
-        <img src="https://cdn.discordapp.com/attachments/1181867865826144286/1207676267323981914/Garou_profile2.webp?ex=65e0832b&is=65ce0e2b&hm=08e3341be975e815f1d55ca0ab5ba6cc5fa2e3749e87d677c1b6f4e75b45b5fb&"
+        <img src="https://cdn.discordapp.com/attachments/1181867865826144286/1207685133310894110/Boros_Manga.png?ex=65e08b6d&is=65ce166d&hm=a350b78e0800651dc7d726ba2273ea3c9ec416ea903818299b361b471e31c8a6&"
             alt="">
     </div>
-    <div class="card2">
-        <h2></h2>
-        <p></p>
-    </div>
-    </div>
-    </div>
+</div>
     <footer>
         <img src="LogoOnepunchmen.png">
         <p>&copy; 2024 Hero Association.</p>
