Changes to json and added home.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+    <script src="home.js" defer></script>
 </head>
 
 <body>
@@ -42,8 +43,8 @@
                 <img src="Hero_Association_Headquarters.png" alt="">
             </div>
             <div class="card2">
-                <h2></h2>
-                <p></p>
+                <table class="top3herocard" id="top3Leaderboard">
+                </table>
             </div>
         </div>
     </main>
