--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -18,7 +18,7 @@
         </div>
         <div class="midden">
             <h2>Sort:</h2>
-            <div class="dropdown">
+            <div class="dropdown" tabindex="1">
                 <button class="dropdown-btn">Ranks</button>
                 <div class="dropdown-content">
                     <button id="button1" onclick='button("1")'>All</button>
@@ -28,9 +28,10 @@
                     <button id="button5" onclick='button("5")'>C</button>
                 </div>
             </div>
-            <div class="dropdown">
-                <button class="dropdown-btn">Type</button>
-                <div class="dropdown-content">
+
+            <div class="dropdown2" tabindex="2">
+                <button class="dropdown2-btn">Type</button>
+                <div class="dropdown2-content">
                     <button id="type1" onclick='leaderboardType("1")'>rating</button>
                     <button id="type2" onclick='leaderboardType("2")'>upvotes</button>
                 </div>
@@ -41,7 +42,7 @@
 
             <a href="Leaderboard.html">Leaderboard</a>
         </div>
-        </div>
+    </div>
 
     <main>
         <div class="tooltip">
