--- a/Leaderboard/Leaderboard.html
+++ b/Leaderboard/Leaderboard.html
@@ -34,6 +34,7 @@
                 <div class="dropdown2-content">
                     <button id="type1" onclick='leaderboardType("1")'>rating</button>
                     <button id="type2" onclick='leaderboardType("2")'>upvotes</button>
+                    <button id="type3" onclick='leaderboardType("3")'>heroicDeeds</button>
                 </div>
             </div>
         </div>
